# zero2prod

./: .env  Cargo.toml  Dockerfile  sqlx-data.json
.cargo/: audit.toml
.github/workflows/: general.yaml
config/: base.yaml  prod.yaml
migrations/: 20221001195342_make_status_not_null_in_subscriptions.sql  20221126200957_seed_user.sql  20230204194749_create_newsletter_issues_table.sql  20230204200059_create_issue_delivery_queue_table.sql  20230207040903_add_issue_delivery_queue_retries.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  log.rs  main.rs  startup.rs  telemetry.rs  user_session.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
