[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
axum = "0.6.0-rc.1"
hyper = { version = "0.14.20", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.144", features = ["derive"] }
config = "0.13.2"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.22"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-error = "0.2.0"
color-eyre = "0.6.2"
serde-aux = "4.0.0"
unicode-segmentation = "1.10.0"
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = ["macros", "postgres", "uuid", "chrono", "migrate", "offline", "runtime-tokio-native-tls"]

[dev-dependencies]
once_cell = "1.14.0"
reqwest =  "0.11.11"
tokio-test = "0.4.2"
