[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["full"] }
axum = "0.6.0-rc.2"
hyper = { version = "0.14.20", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
config = "0.13.2"
uuid = { version = "1.1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-error = { version = "0.2.0", features = ["traced-error"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.0"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde_with = "2.0"
url = { version = "2.3", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.37"
anyhow = "1.0.65"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["macros", "postgres", "uuid", "chrono", "migrate", "offline", "runtime-tokio-native-tls"]

[dev-dependencies]
fake = "2.5"
linkify = "0.9.0"
once_cell = "1.15"
serde_json = "1.0"
tokio-test = "0.4.2"
wiremock = "0.5.14"
