[package]
name = "zero2prod"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = { default-features = false, version = "1.0.66" }
argon2 = { version = "0.4.1", features = ["std"], default-features = false }
async-redis-session = "0.2.2"
async-session = "3.0.0"
async-trait = "0.1.58"
axum = { version = "0.6.4", features = ["form", "tokio", "json", "query", "headers"], default-features = false }
axum-extra = "0.4.2"
axum-flash = "0.6.0"
chrono = { default-features = false, version = "0.4.23" }
config = { default-features = false, version = "0.13.2", features = ["yaml"] }
hyper = "0.14.23"
rand = { default-features = false, version = "0.8.5" }
reqwest = { version = "0.11.14", features = ["json", "cookies"], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { default-features = false, version = "1.0.152" }
serde-aux = { default-features = false, version = "4.1.2" }
serde_json = { default-features = false, version = "1.0" }
serde_with = "2.1"
sqlx = { version = "0.6.2", features = ["macros", "chrono", "migrate", "postgres", "runtime-tokio-native-tls", "uuid", "offline"], default-features = false }
thiserror = "1.0.37"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"], default-features = false }
tower = { default-features = false, version = "0.4.13" }
tracing = { features = ["attributes", ], default-features = false, version = "0.1.37" }
tracing-error = { default-features = false, version = "0.2.0" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "ansi"], default-features = false }
unicode-segmentation = "1.10.0"
url = { version = "2.3.1", default-features = false, features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4", "serde"], default-features = false }
validator = "0.16.0"

[dev-dependencies]
fake = "2.5"
linkify = "0.9.0"
once_cell = "1.16"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tokio-test = "0.4.2"
wiremock = "0.5.15"
